# mlflow

./: .env  .gitignore  Makefile  README.md  TCC_model_sample.ipynb  docker-compose-jupyter.yaml  docker-compose.yaml  myenv.env  notes.txt  potability.ipynb  pyproject.toml
api/: Dockerfile  app.py  main.py  requirements.txt
api/templates/: index.html
