[tool.poetry]
name = "mlflow"
version = "1.0.0"
description = "Mlflow tracker"
authors = ["aexpedito <aexpedito@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.9.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
interrogate = "^1.7.0"
importchecker = "^3.0"
bumpversion = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
