[tool.poetry]
name = "mlflow-at2"
version = "1.0.0"
description = "Mlflow tracker"
authors = ["aexpedito <aexpedito@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.9.0"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
interrogate = "^1.7.0"
importchecker = "^3.0"
bumpversion = "^0.6.0"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
mlflow = "^2.19.0"
ipykernel = "^6.29.5"
kagglehub = "^0.3.6"
tensorflow = "^2.18.0"
plotly = "^6.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = [
    "F",  # pyflakes rules
    "E",  # pycodestyle error rules
    "W",  # pycodestyle warning rules
    "B",  # flake8-bugbear rules
    "I",  # isort rules
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"



[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [  # don't report on checks for these
    '\\.__init__$',
    '\\.__repr__$',
    '\\.__str__$',
]
override_SS05 = [  # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
